Indroduce inheritance of platform-specific zebra config files
Signed-off-by: Nadiya.Stetskovych <Nadiya.Stetskovych@cavium.com>

--- a/ansible/roles/sonicv2/tasks/quagga.yml
+++ b/ansible/roles/sonicv2/tasks/quagga.yml
@@ -25,7 +25,7 @@
 - block:
   - name: Copy Device Specific Quagga Zebra Configuration File.
     become: true
-    template: src=quagga/zebra.conf.j2
+    template: src=quagga/{{ sonic_asic_type }}_zebra.conf.j2
               dest=/etc/quagga/zebra.conf
               owner=root
               group=root
