Add check copying ssw folder for AS7512 platform as it use ssw files from ssw_extra
Signed-off-by: Nadiya.Stetskovych <Nadiya.Stetskovych@cavium.com>

--- a/ansible/roles/sonic-common/tasks/main.yml
+++ b/ansible/roles/sonic-common/tasks/main.yml
@@ -190,6 +190,7 @@
         group=root
         mode=0644
   tags: ssw
+  when: sonic_hwsku != "AS7512"
 
 # Setup Platform
 - include: platform.yml
