Fix sonicdocker path for camv
Signed-off-by: Nadiya.Stetskovych <Nadiya.Stetskovych@cavium.com>

--- a/ansible/roles/sonicv2/tasks/sonic-cavm.yml
+++ b/ansible/roles/sonicv2/tasks/sonic-cavm.yml
@@ -18,7 +18,7 @@
 
 # Install docker containers
 - name: Start syncd docker container
-  include: ../../sonic-common/tasks/sonicdocker.yml
+  include: sonicdocker.yml
   vars:
     docker_container: syncd
     docker_image: "{{ image_id_syncd_cavm }}"
